# genai_usage_observability_gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: PROJECT_STATUS.md  adding_a_provider.md  architecture.md  privacy.md  roadmap.md
src/genai_usage_observability_gateway/: __init__.py  aggregation.py  app.py  config.py  lifecycle_events.py  normalization.py  organization_metrics.py  preview.py  privacy.py  service.py  telemetry.py  telemetry_attributes.py  usage_events.py  workflow.py
src/genai_usage_observability_gateway/models/: __init__.py  usage.py
src/genai_usage_observability_gateway/providers/: __init__.py  anthropic.py  base.py  errors.py  mock.py
tests/: __init__.py  factories.py  test_anthropic_provider.py  test_app.py  test_config.py  test_lifecycle_events.py  test_mock_pipeline.py  test_mock_provider.py  test_models.py  test_normalization_and_aggregation.py  test_organization_metrics.py  test_package.py  test_preview.py  test_privacy.py  test_service.py  test_telemetry.py  test_usage_events.py  test_workflow.py
