[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-usage-observability-gateway"
version = "0.1.0"
description = "A privacy-conscious gateway for enterprise GenAI usage observability."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
  { name = "GenAI Usage Observability Gateway contributors" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "email-validator>=2.2,<3",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.1,<8",
  "ruff>=0.11,<0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genai_usage_observability_gateway"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
